--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Compress release
         run: |
-          7z a ${{github.workspace}}/ActionsRelease.zip ${{github.workspace}}/UEVR/bin/Release/net6.0-windows/*.*
+          7z a ${{github.workspace}}/ActionsRelease.zip ${{github.workspace}}/UEVR/bin/Release/net6.0-windows/win-x64/*.*
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
