--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
-      - run: dotnet build --configuration Release
+      - run: dotnet publish --configuration Release -r win10-x64 --self-contained true
 
       - name: Compress release
         run: |
