--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,22 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
+
       - run: dotnet publish --configuration Release -r win-x64 --self-contained true
+
+      - name: Install ILLink
+        run: dotnet tool install -g il-linker --version 1.0.15
+
+      - name: Link assemblies
+        run: il-linker -c Release -p UEVR.csproj -o linked-output
 
       - name: Compress release
         run: |
-          7z a ${{github.workspace}}/ActionsRelease.zip ${{github.workspace}}/UEVR/bin/Release/net6.0-windows/win-x64/
+          7z a ${{github.workspace}}/ActionsRelease.zip linked-output
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
