--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,16 +16,9 @@ jobs:
         run: |
           7z a ${{github.workspace}}/ActionsRelease.zip ${{github.workspace}}/UEVR/bin/Release/net6.0-windows/win-x64/publish
 
-      - name: Set current time as an environment variable
-        id: set_time
-        run: echo "TIME=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
-
-      - name: Display current time
-        run: echo "Current time: $TIME"
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: UEVR-Frontend-${{ TIME }}
+          name: UEVR-Frontend
           path: ${{github.workspace}}/ActionsRelease.zip
           if-no-files-found: error
